--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 # Database Configuration
+# For Railway deployment: DATABASE_URL format is postgresql://... but we need jdbc:postgresql://...
 spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/tasktracker}
 spring.datasource.username=${DATABASE_USERNAME:postgres}
 spring.datasource.password=${DATABASE_PASSWORD:password}
