--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 # Database Configuration
-# For Railway deployment: DATABASE_URL format is postgresql://... but we need jdbc:postgresql://...
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/tasktracker}
-spring.datasource.username=${DATABASE_USERNAME:postgres}
-spring.datasource.password=${DATABASE_PASSWORD:password}
+# Handle both local development and Railway deployment formats
+# Railway provides DATABASE_URL starting with postgresql://, Spring Boot needs jdbc:postgresql://
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/tasktracker}
+spring.datasource.username=${PGUSER:postgres}
+spring.datasource.password=${PGPASSWORD:password}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate Configuration
