Fix DATABASE_URL conversion for Railway - convert postgresql:// to jdbc:postgresql://

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,6 @@
 # Database Configuration
-# Handle both local development and Railway deployment formats
-# Railway provides DATABASE_URL starting with postgresql://, Spring Boot needs jdbc:postgresql://
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/tasktracker}
-spring.datasource.username=${PGUSER:postgres}
-spring.datasource.password=${PGPASSWORD:password}
+# Use environment variables directly - Railway should provide these
+spring.datasource.url=${DATABASE_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate Configuration
