Extract username and password from DATABASE_URL for Spring Boot authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 # Database Configuration
-# Use environment variables directly - Railway should provide these
+# Use environment variables - start.sh script will extract from DATABASE_URL
 spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate Configuration
