Disable problematic Actuator metrics for containerized environments

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,9 @@ spring.web.cors.allow-credentials=true
 # Actuator Configuration
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=when-authorized
+# Disable problematic metrics in containerized environments using modern configuration
+management.metrics.enable.system.cpu=false
+management.metrics.enable.process.cpu=false
+management.metrics.enable.process.uptime=false
+management.metrics.enable.process.start.time=false
+management.metrics.enable.process.files=false
