--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.jpa.show-sql=true
 server.port=8080
 
 # CORS Configuration
-spring.web.cors.allowed-origins=${CORS_ORIGINS:http://localhost:3000,http://localhost:5173}
+spring.web.cors.allowed-origins=${CORS_ORIGINS:http://localhost:3000,http://localhost:5173,https://*.railway.app,https://*.vercel.app,https://*.netlify.app}
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
 spring.web.cors.allow-credentials=true
