--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
 # Server Configuration
@@ -22,9 +21,6 @@ spring.web.cors.allow-credentials=true
 # Actuator Configuration
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=when-authorized
-# Disable problematic metrics in containerized environments using modern configuration
-management.metrics.enable.system.cpu=false
-management.metrics.enable.process.cpu=false
-management.metrics.enable.process.uptime=false
-management.metrics.enable.process.start.time=false
-management.metrics.enable.process.files=false
+# Completely disable all metrics to avoid container environment issues
+management.metrics.enable.root=false
+spring.jpa.open-in-view=false
