--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,9 +18,10 @@ spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
 spring.web.cors.allow-credentials=true
 
-# Actuator Configuration
-management.endpoints.web.exposure.include=health,info
+# Actuator Configuration - minimal setup
+management.endpoints.web.exposure.include=health
 management.endpoint.health.show-details=when-authorized
-# Completely disable all metrics to avoid container environment issues
+# Disable all metrics functionality
 management.metrics.enable.root=false
+management.endpoint.metrics.enabled=false
 spring.jpa.open-in-view=false
