Disable static resource handling to fix 500 error

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,9 @@ spring.jpa.show-sql=true
 # Server Configuration
 server.port=4001
 
+# Disable static content (backend is API only)
+spring.web.resources.add-mappings=false
+
 # CORS Configuration
 spring.web.cors.allowed-origins=${CORS_ORIGINS:http://localhost:3000,http://localhost:5173,https://*.railway.app,https://*.vercel.app,https://*.netlify.app}
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
