Add custom error controller to handle root path and favicon requests properly

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,10 @@ spring.jpa.show-sql=true
 # Server Configuration
 server.port=4001
 
-# Disable static content (backend is API only)
-spring.web.resources.add-mappings=false
+# Error handling configuration
+server.error.whitelabel.enabled=false
+server.error.include-message=always
+server.error.include-binding-errors=always
 
 # CORS Configuration
 spring.web.cors.allowed-origins=${CORS_ORIGINS:http://localhost:3000,http://localhost:5173,https://*.railway.app,https://*.vercel.app,https://*.netlify.app}
